[gd_scene load_steps=3 format=3 uid="uid://btodufmk06hk3"]

[ext_resource type="Script" uid="uid://v5ltxki7byr5" path="res://addons/inputbind4/Inputscene.gd" id="1_vbjk0"]
[ext_resource type="PackedScene" uid="uid://jec0h4xyamj7" path="res://addons/inputbind4/event_dialog.tscn" id="2_pherw"]

[node name="control" type="VBoxContainer"]
offset_right = 512.0
offset_bottom = 272.0
script = ExtResource("1_vbjk0")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="ScrollContainer" type="ScrollContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="actions" type="VBoxContainer" parent="MarginContainer/VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="default" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "default"

[node name="save" type="Button" parent="MarginContainer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "save"

[node name="eventDialog" parent="." instance=ExtResource("2_pherw")]
visible = false

[node name="PopupMenu" type="PopupMenu" parent="."]

[node name="AcceptDialog" type="AcceptDialog" parent="."]
dialog_text = "event save successful"

[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/default" to="." method="_on_default_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxContainer/save" to="." method="_on_save_pressed"]
[connection signal="id_pressed" from="PopupMenu" to="." method="_on_popup_menu_id_pressed"]
